--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -145,6 +145,7 @@
                         <p class="z-20 text-3xl w-1/2 text-white font-extrabold my-16">Entenda como você começa a poupar desde a primeira conta.</p>
                         <div class="z-10 absolute rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                     </span>
+                    <!--
                     <span class="my-4 text-left border-2 border-white rounded-xl p-12">
                         <p class="text-xl font-extrabold m-0 mb-6 text-white">EXEMPLO:<br>Empresa com Gastos de R$ 12.000 Mensais em Energia</p>
                         <ul>
@@ -152,101 +153,106 @@
                             <li class="list-disc ml-8 my-4 text-sm font-semibold 2xl:text-base"><strong>Modelo de Locação:</strong> a empresa contrata o serviço de locação de energia solar sem custos iniciais de instalação.</li>
                         </ul>
                     </span>
-                    <span class="mb-8">
-                        <div class="grid w-full grid-cols-4 gap-6">
-                            <p class="col-span-4 text-3xl font-extrabold text-white">Benefícios da Locação</p>
-                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
-                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
-                                    <p class="m-auto font-extrabold text-white text-xl">1</p>
+                    -->
+                    <div class="mb-8 grid gap-6 grid-cols-2">
+                        <p class="text-3xl m-0 col-span-2 font-extrabold text-white">Benefícios da Locação</p>
+                        <div class="grid gap-6 grid-cols-2">
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-12 relative overflow-hidden">
+                                <span class="absolute -top-0 -left-0 aspect-square bg-azul rounded-br-full w-12 items-center justify-center">
+                                    <p class="font-extrabold mt-2 ml-3 text-white text-xl">1</p>
                                 </span>
                                 <p class="text-base mb-6 text-neutral-800 font-extrabold">Redução imediata na conta de luz:</p>
                                 <p class="m-0 text-xs mb-4">Economia anual estimada: R$ 24.000 (cerca de 20% do valor gasto).</p>
                                 <p class="m-0 text-xs mb-4">Após 20 anos, economia acumulada sem correção: R$ 480.000.</p>
                             </div>
-                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
-                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
-                                    <p class="m-auto font-extrabold text-white text-xl">2</p>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-12 relative overflow-hidden">
+                                <span class="absolute -top-0 -left-0 aspect-square bg-azul rounded-br-full w-12 items-center justify-center">
+                                    <p class="font-extrabold mt-2 ml-3 text-white text-xl">2</p>
                                 </span>
                                 <p class="text-base mb-6 text-neutral-800 font-extrabold">Investimento Sustentável:</p>
                                 <p class="m-0 text-xs mb-4">Redução significativa da dependência de energia de fontes não renováveis.</p>
                                 <p class="m-0 text-xs mb-4">Contribuição para a sustentabilidade e diminuição da pegada de carbono.</p>
                             </div>
-                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
-                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
-                                    <p class="m-auto font-extrabold text-white text-xl">3</p>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-12 relative overflow-hidden">
+                                <span class="absolute -top-0 -left-0 aspect-square bg-azul rounded-br-full w-12 items-center justify-center">
+                                    <p class="font-extrabold mt-2 ml-3 text-white text-xl">3</p>
                                 </span>
                                 <p class="text-base mb-6 text-neutral-800 font-extrabold">Facilidade na Gestão:</p>
                                 <p class="m-0 text-xs mb-4">Sem custos de manutenção ou substituição de equipamentos.</p>
                                 <p class="m-0 text-xs mb-4">A empresa fornecedora cuida de toda a documentação e suporte técnico.</p>
                             </div>
-                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
-                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
-                                    <p class="m-auto font-extrabold text-white text-xl">4</p>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-12 relative overflow-hidden">
+                                <span class="absolute -top-0 -left-0 aspect-square bg-azul rounded-br-full w-12 items-center justify-center">
+                                    <p class="font-extrabold mt-2 ml-3 text-white text-xl">4</p>
                                 </span>
                                 <p class="text-base mb-6 text-neutral-800 font-extrabold">Economia Acumulada com Correção<br>(1% ao mês):</p>
                                 <p class="m-0 text-xs mb-4">Com os valores economizados aplicados a 12% ao  ano, o montante pode ultrapassar R$ 356.000  ao longo de 20 anos, proporcionando um lucro significativo além da economia nas contas de luz.</p>
                             </div>
                         </div>
-                    </span>
-                </div>
-            </section>
-            <section class="py-20">
-                <div class="conteudo grid-cols-5">
-                    <input class="w-1/3 mx-auto col-span-5" type="range" name="" id="range-conta" value="0" min="0" max="20000" step="1000">
-                    <table class="w-full col-span-2">
-                        <tbody>
-                            <tr>
-                                <td class="tab-descr-valor">CONTA (Mensal)</td>
-                                <td id="conta-mensal" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">CONSUMO (KWh/mês)</td>
-                                <td id="consumo" class="tab-orcamento-valores">0 kWh</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">COMPRA (Invest.)</td>
-                                <td id="compra" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>                            
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 01</td>
-                                <td id="ano-01" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 02</td>
-                                <td id="ano-02" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 03</td>
-                                <td id="ano-03" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 04</td>
-                                <td id="ano-04" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 05</td>
-                                <td id="ano-05" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 06</td>
-                                <td id="ano-06" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">Economia no Ano 07 até ano 20</td>
-                                <td id="ano-07" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">GANHO TOTAL S/ APLICAÇÃO</td>
-                                <td id="ganho-sem-aplic" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                            <tr>
-                                <td class="tab-descr-valor">GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
-                                <td id="ganho-com-aplic" class="tab-orcamento-valores">R$ 0,00</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="col-span-3 h-full">
-                        <canvas id="myChart" class="p-4 bg-neutral-100 rounded-lg" style="width: 100%; height: 400px;"></canvas>
+                        <div class="rounded-xl bg-white shadow-lg p-4 lg:p-16">
+                            <h2>Faça uma simulação</h2>
+                            <span class="mb-16 font-extrabold">
+                                <label for="">Indira o valor médio da sua conta mensal:<br class="">R$ </label>
+                                <input class="outline-0 border-0" type="number" name="" id="range-conta" value="0" min="0" max="20000">
+                            </span>
+                            <table class="w-full mt-6">
+                                <tbody>
+                                    <tr>
+                                        <td class="tab-descr-valor">CONTA (Anual)</td>
+                                        <td id="conta-anual" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">CONSUMO (KWh/mês)</td>
+                                        <td id="consumo" class="tab-orcamento-valores">0 kWh</td>
+                                    </tr>
+                                    <!--
+                                    <tr>
+                                        <td class="tab-descr-valor">COMPRA (Invest.)</td>
+                                        <td id="compra" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    -->
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 01</td>
+                                        <td id="ano-01" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 02</td>
+                                        <td id="ano-02" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 03</td>
+                                        <td id="ano-03" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 04</td>
+                                        <td id="ano-04" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 05</td>
+                                        <td id="ano-05" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 06</td>
+                                        <td id="ano-06" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">Economia no Ano 07 até ano 20</td>
+                                        <td id="ano-07" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">GANHO TOTAL S/ APLICAÇÃO</td>
+                                        <td id="ganho-sem-aplic" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor">GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
+                                        <td id="ganho-com-aplic" class="tab-orcamento-valores">R$ 0,00</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <a id="btn-simulador">
+                                <button class="btn w-full mt-16 uppercase text-base shadow-md rounded-lg bg-azul p-4 text-branco font-extrabold">Fale com um consultor</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
