--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -13,7 +13,7 @@
             <section class="bg-neutral-800 lp-back py-8 lg:py-16">
                 <div class="conteudo">
                     <span class="flex justify-center flex-col h-60">
-                        <h1 class="font-extrabold text-neutral-100 uppercase lg:text-6xl">Troque seu fornecedor <br> e tenha <strong>20% de economia</strong> <br> em sua conta</h1>
+                        <h1 class="font-extrabold text-neutral-100 uppercase lg:text-6xl">Troque seu fornecedor <br> e tenha <strong>20% de economia</strong> <br> em sua conta imediatamente</h1>
                     </span>
                 </div>
             </section>
@@ -21,10 +21,10 @@
                 <div class="conteudo lg:grid-cols-5">
                     <div class="flex flex-col justify-center lg:col-span-3 lg:pr-16">
                         <img class="w-full mb-6 lg:w-72" src="../assets/img/logo-agro-e-solar-5.png" alt="Logotipo Agro&Solar">
-                        <p class="font-extrabold uppercase text-azul lg:text-3xl lg:leading-10">Comece com a economia de 20% ao ano e aumenta para 50%</p>
+                        <p class="font-extrabold uppercase text-azul lg:text-3xl lg:leading-10">Comece com a economia de 20% ao ano e chegue até 50%</p>
                         <p class="uppercase text-neutral-400 lg:text-xl"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong> em 20 anos.</p>
-                        <a class="mt-12 w-full lg:w-80" href="https://api.whatsapp.com/send?phone=5511948084740&text=Ol%C3%A1!%0A%0AGostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20loca%C3%A7%C3%A3o%20de%20sistemas%20fotovoltaicos." target="_blank">
-                            <button class="btn w-full text-xl shadow-md rounded-lg bg-verde text-branco font-extrabold">Quero trocar</button>
+                        <a class="mt-12 w-full lg:w-80" href="/#simulador" target="">
+                            <button class="btn w-full text-xl shadow-md rounded-lg bg-verde text-branco font-extrabold">Faça uma simulação</button>
                         </a>
                     </div>
                     <img src="../assets/img/pequeno-projetos.png" alt="Pequenos Projetos" class="rounded-lg scale-90 lg:scale-100 lg:col-span-2" style="box-shadow:-20px 20px 0 #B3DE00">
@@ -44,7 +44,7 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 6.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p class="text-sm mb-1">Conta Anual em 20 anos:</p>
+                            <p class="text-sm mb-1">Conta Total em 20 anos:</p>
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 120.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
@@ -52,7 +52,7 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 52.800</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
-                            <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
+                            <p class="text-sm mb-2">Se sua economia for aplicada a<br><strong>12%</strong> ao ano, renderá:</p>
                             <p class="m-0 font-extrabold text-verde text-3xl lg:text-4xl">R$ 178.179</p>
                         </span>
                     </div>
@@ -67,7 +67,7 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 12.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p class="text-sm mb-1">Conta Anual em 20 anos:</p>
+                            <p class="text-sm mb-1">Conta Total em 20 anos:</p>
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 240.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
@@ -75,7 +75,7 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 105.600</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
-                            <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
+                            <p class="text-sm mb-2">Se sua economia for aplicada a<br><strong>12%</strong> ao ano, renderá:</p>
                             <p class="m-0 font-extrabold text-verde text-3xl lg:text-4xl">R$ 356.358</p>
                         </span>
                     </div>
@@ -90,7 +90,7 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 60.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p class="text-sm mb-1">Conta Anual em 20 anos:</p>
+                            <p class="text-sm mb-1">Conta Total em 20 anos:</p>
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 1.200.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
@@ -98,42 +98,41 @@
                             <p class="m-0 text-xl font-extrabold text-azul">R$ 528.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
-                            <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
+                            <p class="text-sm mb-2">Se sua economia for aplicada a<br><strong>12%</strong> ao ano, renderá:</p>
                             <p class="m-0 font-extrabold text-verde text-3xl lg:text-4xl">R$ 1.781.791</p>
                         </span>
                     </div>
                 </div>
-                <div class="conteudo mt-20">
+                <div id="simulador" class="conteudo mt-20">
                     <div class="mx-auto rounded-xl bg-white shadow-lg p-4 -ml-4 -mr-4 lg:ml-auto lg:mr-auto lg:w-1/2 lg:p-16">
-                        <h2>Faça uma simulação aqui e agora</h2>
-                        <div class="mb-12">
+                        <h2 class="font-extrabold text-5xl text-azul">Faça uma simulação aqui e agora</h2>
+                        <div class="">
                             <form action="" method="" id="contact-form" class="flex flex-col w-full">
                                 <span class="w-full mb-4">
-                                    <label for="simulador-nome" class="absolute text-[10px] ml-4 mt-1 h-6">Nome Completo</label>
-                                    <input id="input-nome" type="text" name="name" class="input-campo w-full pt-8">
+                                    <label for="simulador-nome" class="absolute text-[10px] ml-2 mt-1 h-6">Nome Completo</label>
+                                    <input id="input-nome" type="text" name="name" class="input-campo w-full p-2 pt-6">
                                 </span>
                                 <span class="w-full mb-4">
-                                    <label for="simulador-tel" class="absolute text-[10px] ml-4 mt-1 h-6">Telefone</label>
-                                    <input id="input-tel" placeholder="__ _____-____" type="number" name="tel" class="input-campo w-full pt-8">
+                                    <label for="simulador-tel" class="absolute text-[10px] ml-2 mt-1 h-6">Telefone</label>
+                                    <input id="input-tel" placeholder="__ _____-____" type="number" name="tel" class="input-campo w-full p-2 pt-6">
                                 </span>
                                 <!--<button id="btn-ativar-simulador" class="btn bg-verde font-extrabold text-xl">Enviar</button>-->
                                 <button type="submit" id="btn-ativar-simulador" class="btn bg-verde font-extrabold text-xl">Enviar</button>
                             </form>
                         </div>
-                        <div id="box-simulador" class="hidden">
-                            <span class="mb-16 font-extrabold">
-                                <label for="">Indira o valor médio da sua conta mensal:<br class="">R$ </label>
-                                <input class="outline-0 border-0" type="number" name="" id="range-conta" value="0" min="0" max="20000">
+                        <div id="box-simulador" class="hidden mt-12">
+                            <span class="mb-8 font-extrabold flex flex-col">
+                                <label for="">Insira o valor médio da sua conta mensal:</label>
+                                <p class="text-2xl mt-4 border-b border-verde w-1/3">
+                                    R$
+                                    <input class="outline-0 border-0" type="number" name="" id="range-conta" value="" min="0" max="20000">
+                                </p>
                             </span>
-                            <table class="w-full mt-6">
+                            <table class="w-full mt-6 tabela-simulador">
                                 <tbody>
                                     <tr>
                                         <td class="tab-descr-valor">CONTA (Anual)</td>
                                         <td id="conta-anual" class="tab-orcamento-valores">R$ 0,00</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tab-descr-valor font-black">CONTA ANUAL EM 20 ANOS</td>
-                                        <td id="conta-anual-a20" class="tab-orcamento-valores font-black">R$ 0,00</td>
                                     </tr>
                                     <tr>
                                         <td class="tab-descr-valor">CONSUMO (KWh/mês)</td>
@@ -144,40 +143,50 @@
                                         <td id="compra" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
                                     <tr>
-                                        <td class="tab-descr-valor">Economia no Ano 01</td>
+                                        <td class="tab-descr-valor">Economia por ano no anos 1 e 2</td>
                                         <td id="ano-01" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
+                                    <!--
                                     <tr>
                                         <td class="tab-descr-valor">Economia no Ano 02</td>
                                         <td id="ano-02" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
+                                    -->
                                     <tr>
-                                        <td class="tab-descr-valor">Economia no Ano 03</td>
+                                        <td class="tab-descr-valor">Economia por ano no anos 3 e 4</td>
                                         <td id="ano-03" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
+                                    <!--
                                     <tr>
                                         <td class="tab-descr-valor">Economia no Ano 04</td>
                                         <td id="ano-04" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
+                                    -->
                                     <tr>
-                                        <td class="tab-descr-valor">Economia no Ano 05</td>
+                                        <td class="tab-descr-valor">Economia por ano no anos 5 e 6</td>
                                         <td id="ano-05" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
+                                    <!--
                                     <tr>
                                         <td class="tab-descr-valor">Economia no Ano 06</td>
                                         <td id="ano-06" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
+                                    -->
                                     <tr>
-                                        <td class="tab-descr-valor">Economia no Ano 07 até ano 20</td>
+                                        <td class="tab-descr-valor">Economia do 7º ao 20º ano</td>
                                         <td id="ano-07" class="tab-orcamento-valores">R$ 0,00</td>
                                     </tr>
                                     <tr>
-                                        <td class="tab-descr-valor font-black text-sm">GANHO TOTAL SEM APLICAÇÃO</td>
-                                        <td id="ganho-sem-aplic" class="tab-orcamento-valores font-black text-sm">R$ 0,00</td>
+                                        <td class="tab-descr-valor font-black text-sm">CONTA TOTAL EM 20 ANOS</td>
+                                        <td id="conta-anual-a20" class="tab-orcamento-valores font-black text-sm">R$ 0,00</td>
                                     </tr>
                                     <tr>
-                                        <td class="tab-descr-valor font-black text-sm">GANHO TOTAL COM APLICAÇÃO (12% Real/Ano)</td>
-                                        <td id="ganho-com-aplic" class="tab-orcamento-valores font-black text-sm">R$ 0,00</td>
+                                        <td class="tab-descr-valor font-black text-sm text-azul">ECONOMIA TOTAL SEM APLICAÇÃO</td>
+                                        <td id="ganho-sem-aplic" class="tab-orcamento-valores font-black text-sm text-azul">R$ 0,00</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tab-descr-valor font-black text-sm text-verde-escuro">ECONOMIA TOTAL COM APLICAÇÃO<br>(12% real/ano)</td>
+                                        <td id="ganho-com-aplic" class="tab-orcamento-valores font-black text-sm text-verde-escuro">R$ 0,00</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -236,7 +245,8 @@
                     </div>
                 </div>
                 <a class="conteudo my-12 lg:my-24" href="https://agroesolar.com.br/" target="_blank">
-                    <p class="text-verde m-0 text-center lg:text-2xl">Conheça a Agro&Solar</p>
+                    <img class="w-full mx-auto mt-8 lg:w-72" src="../assets/img/logo-agro-e-solar-5.png" alt="Logotipo Agro&Solar">
+                    <p class="text-verde m-0 text-center lg:text-2xl">Conheça a <strong>Agro&Solar</strong> - Sua opção para energia mais barata</p>
                 </a>
                 <a class="conteudo mt-6" href="https://api.whatsapp.com/send?phone=5511948084740&text=Ol%C3%A1!%0A%0AGostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20loca%C3%A7%C3%A3o%20de%20sistemas%20fotovoltaicos." target="_blank">
                     <button class="btn  mx-auto uppercase shadow-md rounded-lg bg-azul p-3 text-branco font-extrabold lg:w-1/2 lg:text-lg lg:p-6">Fale Conosco e veja como funciona!</button>
